# hourglass

backend/: Cargo.toml  build.rs
backend/src/: assets.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: creator.rs  input.rs  main.rs  timer.rs
model/: Cargo.toml
