[package]
name = "hourglass-frontend"
version = "0.1.0"
edition = "2021"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"

[dependencies]
# In-House deps
hourglass-model = { path = "../model" }

yew = { version = "0.20", features = ["csr"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
derive_more = "0.99.17"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3.65"
